k8s/Gateway API/auth-login-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-login-route
spec:
  parentRefs:
    - name: myapp-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/auth/login
      backendRefs:
        - name: auth-service
          port: 3001

# specific rule just for login
