k8s/Gateway API/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  parentRefs:
    - name: myapp-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: auth-service
          port: 3001

    - matches:
        - path:
            type: PathPrefix
            value: /api/puzzle
      backendRefs:
        - name: puzzle-service
          port: 3002

    - matches:
        - path:
            type: PathPrefix
            value: /api/leaderboard
      backendRefs:
        - name: leaderboard-service
          port: 3003

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
